--- a/css/site_sections.css
+++ b/css/site_sections.css
@@ -201,6 +201,7 @@
     line-height: 1.1em;
     font-weight: bold;
     width: 100%;
+    font-weight: normal;
     text-align: center;
     font-size: 40px;
     font-family: "Titan One", serif;
