--- a/css/login.css
+++ b/css/login.css
@@ -21,7 +21,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("public/img/login.jpg") no-repeat;
+    background: url("img/login.jpg") no-repeat;
 }
 
 .box {
